--- a/templates/index.html
+++ b/templates/index.html
@@ -21,14 +21,14 @@
                 <input type="number" id="age" name="age" autocomplete="age" min="17" max="30" required>
                 <br>
 
-                <label for="year1_marks">First Year Marks:</label>
-                <input type="number" id="year1_marks" name="year1_marks" min="0" max="100" autocomplete="year1_marks" required>
+                <label for="year1_marks">First Year Percentage:</label>
+                <input type="number" id="year1_marks" name="year1_marks" min="0" max="100" step="0.1" autocomplete="year1_marks" required>
                 <br>
-
-                <label for="year2_marks">Second Year Marks:</label>
-                <input type="number" id="year2_marks" name="year2_marks" min="0" max="100" autocomplete="year2_marks" required>
+                
+                <label for="year2_marks">Second Year Percentage:</label>
+                <input type="number" id="year2_marks" name="year2_marks" min="0" max="100" step="0.1" autocomplete="year2_marks" required>
                 <br>
-
+                
                 <label for="study_time">Study Time (hours):</label>
                 <input type="number" id="study_time" name="study_time" min="0" max="18" autocomplete="study_time" required>
                 <br>
